# merger-simulation-hhi-analyzer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
data/raw/: mock_market_shares.csv  telecom_market_2019.csv
docs/: api.md  examples.md  jurisdictions.md  methodology.md
notebooks/: historical_case_study.ipynb
scripts/: run_example.ps1  run_example.sh
src/merger_sim/: __init__.py  app.py  cli.py  config.py  io.py  metrics.py  models.py  plotting.py  simulation.py
tests/: test_cli.py  test_io.py  test_metrics.py
