[project]
name = "merger-sim"
version = "0.1.0"
description = "A quantitative antitrust toolkit for HHI market concentration and merger simulation."
authors = [{ name = "An Vo", email = "thanhan25@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "google-cloud-bigquery>=3.42.1",
    "db-dtypes>=1.7.0",
    "google-cloud-bigquery-storage>=2.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
merger-sim = "merger_sim.cli:app"

[tool.ruff]
line-length = 88
target-version = "py310"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:db_dtypes.*:"
]
